--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" type="x-icon" href="icon.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>My Art Gallery</title>
@@ -23,6 +24,12 @@
                 <img src="D7.jpg">
                 <img src="D11.jpg">
                 <img src="D21.jpg">
+                <img src="D26.jpeg">
+                <img src="D39.jpeg">
+                <img src="D28.jpeg">
+                <img src="D37.jpeg">
+                <img src="D40.jpeg">
+                <img src="D43.jpeg">
             </div>
 
             <div class="pics">
@@ -34,6 +41,12 @@
                 <img src="D20.jpg">
                 <img src="D19.jpg">
                 <img src="D24.jpg">
+                <img src="D29.jpeg">
+                <img src="D30.jpeg">
+                <img src="D31.jpeg">
+                <img src="D35.jpeg">
+                <img src="D27.jpeg">
+                <img src="D41.jpeg">
             </div>
 
             <div class="pics">
@@ -45,6 +58,12 @@
                 <img src="D18.jpg">
                 <img src="D23.jpg">
                 <img src="D9.jpg">
+                <img src="D32.jpeg">
+                <img src="D33.jpeg">
+                <img src="D34.jpeg">
+                <img src="D36.jpeg">
+                <img src="D38.jpeg">
+                <img src="D42.jpeg">
             </div>
     </div>
 </body>
