--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
                 <img src="D37.jpeg">
                 <img src="D40.jpeg">
                 <img src="D43.jpeg">
+                <img src="D47.jpg">
+                <img src="D48.jpg">
             </div>
 
             <div class="pics">
@@ -47,6 +49,7 @@
                 <img src="D35.jpeg">
                 <img src="D27.jpeg">
                 <img src="D41.jpeg">
+                <img src="D45.jpg">
             </div>
 
             <div class="pics">
@@ -64,6 +67,8 @@
                 <img src="D36.jpeg">
                 <img src="D38.jpeg">
                 <img src="D42.jpeg">
+                <img src="D44.jpg">
+                <img src="D46.png">
             </div>
     </div>
 </body>
